# tree-sitter-relview

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-relview.pc.in
bindings/c/tree_sitter/: tree-sitter-relview.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_relview/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterRelviewTests/: TreeSitterRelviewTests.swift
relation/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
relation/bindings/c/: tree-sitter-relview-relation.pc.in
relation/bindings/go/: binding.go  binding_test.go
relation/bindings/node/: binding.cc  index.js
relation/bindings/rust/: build.rs  lib.rs
relation/src/: grammar.json  node-types.json  parser.c
relation/test/corpus/: examples.txt
src/: grammar.json  node-types.json  parser.c
test/corpus/: acyclic1.txt  acyclic2.txt  classes.txt  examples.txt  prim.txt  reachable1.txt  reachable2.txt  rtc1.txt  rtc2.txt  rtc3.txt  rtc4.txt  rtc5.txt  szpilrajn.txt  tc1.txt  topsort.txt  tred.txt  tredacyclic1.txt  tredacyclic2.txt  tupling.txt
test/corpus/kure2/: ApproxAlg.txt  Aux.txt  Cyclefree.txt  DFS.txt  DedekindCuts.txt  Graph.txt  KernelCyclefree.txt  KernelEnumerate.txt  Misc.txt  OrderLattice.txt  PetriNets.txt  RecursiveProg.txt  (+4 more)
(+14 files in other folders)
